# EngSmartSuite

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_server.py  run_smartsuite.bat  run_smartsuite.sh  setup_offline.bat  setup_offline.sh  smartsuite_report.html
.claude/skills/python-project-review/: SKILL.md
.claude/skills/python-project-review/references/: benchmark-report.md  benchmark.json  evals.json
.claude/skills/python-project-review/references/eval-reports/: eval-architecture-with_skill.md  eval-architecture-without_skill.md  eval-data-pipeline-with_skill.md  eval-data-pipeline-without_skill.md  eval-stat-formulas-with_skill.md  eval-stat-formulas-without_skill.md
.github/workflows/: ci.yml
docs/: CODE_REVIEW_2026-07-05.md  api-reference.md  code-review-findings-2026-07-05.md  code-review-prompt.md  code-review-report-2026-07-06.md  code-review-report-2026-07-07-r2.md  code-review-report-2026-07-07.md  code-review-verification-2026-07-06.md  known-issues.md  skill.md  user-manual.md
docs/adr/: 0001-three-layer-architecture.md  0002-web-ui-replaces-excel-layer.md
docs/contributing/: comprehensive-review-prompt.md
docs/superpowers/plans/: 2026-06-28-smartexcel-suite-v1-plan.md
docs/superpowers/specs/: 2026-06-28-smartexcel-suite-design.md
scripts/: README.md  create_excel_buttons.py  demo_all_analyses.py  gen_requirements.py  generate_assembly_data.py  generate_chemical_data.py  generate_manual_images.py  generate_pharma_data.py  generate_reliability_data.py  generate_test_data.py  generate_warranty_data.py  setup_excel_addin.py  smartsuite_gui.py  verify_consistency.py  verify_cross_consistency.py  verify_manual_claims.py
skills/: smartsuite-dev.md
smartexcel/: cli.py
smartexcel/core/: contracts.py  exceptions.py
smartexcel/engine/: __init__.py  doe_opt.py  root_cause.py  spc_monitor.py
smartexcel/excel/: addin.py  ribbon.py
smartexcel/services/: __init__.py  data_io.py  orchestrator.py  reporter.py
smartexcel_addin/: SmartExcel_Addin.xlam.tmp  ribbon.xml  smartexcel_addin.py
smartsuite/: __init__.py  cli.py
smartsuite/core/: contracts.py  exceptions.py
smartsuite/engine/: __init__.py  _constants.py  _palette.py  _utils.py  capability.py  detection.py  doe_opt.py  exploratory.py  reliability.py  root_cause.py  spc_charts.py  spc_fixes.py  spc_monitor.py
smartsuite/excel/: addin.py  dialogs.py  ribbon.py
smartsuite/services/: __init__.py  audit.py  data_io.py  orchestrator.py  reporter.py
smartsuite/web/: __init__.py  api.py  app.py
smartsuite/web/static/: app.js  style.css
smartsuite/web/templates/: index.html
smartsuite_addin/: SmartExcelRibbon.bas  SmartSuiteRibbon.bas  ribbon.xml  smartsuite_addin.py
templates/: example_anomaly_detect.yaml  example_anova.yaml  example_bootstrap.yaml  example_box_chart.yaml  example_change_point.yaml  example_contingency.yaml  example_correlation.yaml  example_cronbach.yaml  example_cusum.yaml  example_decision_tree.yaml  example_distribution.yaml  example_doe.yaml  example_full_suite.yaml  example_gage_rr.yaml  example_grid_search.yaml  example_hypothesis_test.yaml  example_kappa.yaml  example_kruskal.yaml  example_lasso_regression.yaml  example_logistic_regression.yaml  example_mcnemar.yaml  example_median_ci.yaml  example_multi_objective.yaml  example_normality_check.yaml  example_outlier_consensus.yaml  example_power_analysis.yaml  example_process_capability.yaml  example_proportion_ci.yaml  example_quantile_regression.yaml  example_regression.yaml  example_response_surface.yaml  example_robust_regression.yaml  example_roc_analysis.yaml  example_scatter_plot.yaml  example_spc.yaml  example_spc_attribute.yaml  example_spc_ewma.yaml  example_spc_nonparametric.yaml  example_spc_xbar.yaml  example_survival.yaml  (+5 more)
tests/: _diff_cli_web.py  conftest.py  results.pptx  test_assembly_data.xlsx  test_chemical_data.xlsx  test_data.xlsx  test_integration.py  test_integration_chemical.py  test_integration_reliability.py  test_integration_warranty.py  test_master_integration.py  test_pharma_data.xlsx  test_reliability_data.xlsx  test_spc_monitor_patch.py  test_warranty_data.xlsx  test_web_e2e.py  test_workflows.py  verify_all_modules.py
tests/demo_output/: demo_report.html
tests/test_engine/: test_correctness.py  test_doe_opt.py  test_edge_cases.py  test_fuzz.py  test_invariants.py  test_new_functions.py  test_root_cause.py  test_spc_monitor.py
tests/test_services/: test_audit.py  test_differential.py  test_manual_parity.py  test_orchestrator.py  test_reporter.py
