[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsuite"
version = "0.1.0"
description = "SmartSuite — 工艺数据分析工具箱 (Excel + Python)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SmartSuite Team"}
]
keywords = ["excel", "analysis", "manufacturing", "doe", "spc", "anova"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "xlwings>=0.30",
    "python-pptx>=0.6",
    "reportlab>=4.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
web = [
    "flask>=3.0",
]
viz = [
    "seaborn>=0.12",
    "tabulate>=0.9",
]

[project.scripts]
smartsuite = "smartsuite.cli:main"

[tool.setuptools.packages.find]
include = ["smartsuite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"smartsuite/engine/__init__.py" = ["E402"]  # matplotlib config must precede imports
"smartsuite/engine/doe_opt.py" = ["E402", "N803", "N806"]  # sp_stats alias + math vars X, Z, etc.
"smartsuite/engine/root_cause.py" = ["E402", "N803", "N806"]  # sp_stats alias + math vars Q, S, JT
"smartsuite/engine/spc_monitor.py" = ["N806"]  # math vars
"smartsuite/cli.py" = ["E402"]  # matplotlib.use before imports
"smartsuite/web/*" = ["E402"]  # matplotlib config before imports
"smartsuite/services/reporter.py" = ["N806"]  # txBox variable
"tests/*" = ["N806", "E501", "F841"]  # test fixtures + math vars
