[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsuite"
version = "0.1.0"
description = "SmartSuite — 工艺数据分析工具箱 (Excel + Python)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SmartSuite Team"}
]
keywords = ["excel", "analysis", "manufacturing", "doe", "spc", "anova"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
    "pyarrow>=14.0",
]
report = [
    "python-pptx>=0.6",
    "reportlab>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "smartsuite[web,report]",
]

[project.scripts]
smartsuite = "smartsuite.cli:main"

[tool.setuptools.packages.find]
include = ["smartsuite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"smartsuite/engine/__init__.py" = ["E402", "I001"]  # matplotlib config + core deps check must precede imports
"smartsuite/engine/doe_opt.py" = ["E402", "N803", "N806", "B007", "B905"]  # sp_stats alias + math vars + zip strict
"smartsuite/engine/root_cause.py" = ["E402", "N803", "N806", "B007", "B905"]  # sp_stats alias + math vars + zip strict
"smartsuite/engine/spc_monitor.py" = ["N806", "B007", "B905"]  # math vars + zip strict
"smartsuite/cli.py" = ["E402"]  # matplotlib.use before imports
"smartsuite/web/*" = ["E402"]  # matplotlib config before imports
"smartsuite/services/orchestrator.py" = ["I001"]  # sorted engine imports for readability
"smartsuite/services/reporter.py" = ["N806", "B904"]  # txBox variable + raise from err (Python 3.10)
"tests/*" = ["N806", "E501", "F841"]  # test fixtures + math vars
